--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,105 @@
-# Visual Studio / Rider / IDE
+
+# ------------------------
+# Visual Studio / IDE
+# ------------------------
 .vs/
 .vscode/
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
+.idea/
 
-# Build artifacts
+# ------------------------
+# Build Artifacts
+# ------------------------
 bin/
 obj/
 Debug/
 Release/
-
-# Rider / IntelliJ
-.idea/
-
-# .NET
-*.nupkg
-*.snupkg
 *.dll
 *.pdb
 *.cache
 *.log
-*.ide
 
-# EF Core / Migrations (optional, if not committed)
+# ------------------------
+# NuGet / Packages
+# ------------------------
+*.nupkg
+*.snupkg
+packages/
+*.dll
+
+# ------------------------
+# EF Core / Migrations
+# ------------------------
 Migrations/
 
-# MongoDB local files (if any)
+# ------------------------
+# MongoDB local
+# ------------------------
 *.lock
 *.db
 
+# ------------------------
 # Docker
+# ------------------------
 docker-compose.override.yml
 *.env
+*.dockerignore
 
-# OS
+# ------------------------
+# OS / Misc
+# ------------------------
 .DS_Store
 Thumbs.db
 
-# Test results
+# ------------------------
+# Test Results
+# ------------------------
 TestResults/
 *.trx
 *.coverage
 *.coveragexml
+
+# ------------------------
+# Logs
+# ------------------------
+*.log
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
