--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "keycloak-js": "^25.0.6",
     "lucide-react": "^0.542.0",
     "next": "14.2.32",
